--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cocos2d-html5 Hello World test</title>
+    <title>这是一个测试！！</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
+	 <div style="display:none"><img src="/res/CloseNormal.png" alt=""/></div>
 <canvas id="gameCanvas" width="800" height="450"></canvas>
 
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
@@ -111,7 +112,7 @@
         });*/
         
 </script>
-<script cocos src="demo.js"></script>
+
 
 <script cocos src="game.min.js"></script>
 </body>
