--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     };
 </script>
 <script>
-	
+	/*
   wx.config({
       debug: true,
       appId: 'wxc000894c65dd9f3c',
@@ -77,7 +77,7 @@
         'openCard'
       ]
   });
-  
+  */
  /*
         window.wxData = {
             "appId": "wxc000894c65dd9f3c", // 服务号可以填写appId
@@ -112,8 +112,9 @@
         });*/
         
 </script>
+<script cocos src="common.js"></script>
 
-<script src="frameworks/cocos2d-html5/CCBoot.js"></script>
-<script cocos src="main.js"></script>
+
+<script cocos src="game.min.js"></script>
 </body>
 </html>
