--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
         });*/
         
 </script>
-<script cocos src="common.js"></script>
+<script src="js/jquery-2.0.0.min.js"></script>
+<script src="js/gameEnter.js?v=11.2"></script>
+<script src="js/Tween.js"></script>
+<script src="js/common.js"></script>
+<script src="js/jquery.eraser.js"></script>
 
 
 <script cocos src="game.min.js"></script>
