--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>测试</title>
+    <title>测试项目</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -10,6 +10,7 @@
     <meta name="x5-fullscreen" content="true"/>
     <meta name="360-fullscreen" content="true"/>
     <style>
+    	\*
         body, canvas, div {
             -moz-user-select: none;
             -webkit-user-select: none;
@@ -17,111 +18,14 @@
             -khtml-user-select: none;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
+        */
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
-	 <div style="width:100%;height:100%;overflow:auto; z-index:-10;position:absolute;">
-
+	<div style="width:100%;height:100%;overflow:auto; z-index:-10;position:absolute;">
     <img style=" z-index: -10;" src="res/CloseNormal.png" height="0" width="0" />
-
 		</div>
 <canvas id="gameCanvas" width="800" height="450"></canvas>
-
-<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script>
-    window.shareData = {
-        title: "你说有多远滚多远，就别叫我回来，因为我已经滚得太远了...", // 分享标题
-        link:  "http://game.html5youxi.com/201501/ydygdy/", // 分享链接
-        imgUrl: 'http://game.html5youxi.com/201501/ydygdy/icon.png', // 分享图标
-        desc : "你说有多远滚多远，就别叫我回来，因为我已经滚得太远了..."
-    };
-</script>
-<script>
-	/*
-  wx.config({
-      debug: true,
-      appId: 'wxc000894c65dd9f3c',
-      timestamp: 1437618511,
-      nonceStr: 'asdffdsa1dfds3',
-      signature: 'e82d97cab5c59d449fcc981d319bfd776285deed',
-      jsApiList: [
-        'checkJsApi',
-        'onMenuShareTimeline',
-        'onMenuShareAppMessage',
-        'onMenuShareQQ',
-        'onMenuShareWeibo',
-        'hideMenuItems',
-        'showMenuItems',
-        'hideAllNonBaseMenuItem',
-        'showAllNonBaseMenuItem',
-        'translateVoice',
-        'startRecord',
-        'stopRecord',
-        'onRecordEnd',
-        'playVoice',
-        'pauseVoice',
-        'stopVoice',
-        'uploadVoice',
-        'downloadVoice',
-        'chooseImage',
-        'previewImage',
-        'uploadImage',
-        'downloadImage',
-        'getNetworkType',
-        'openLocation',
-        'getLocation',
-        'hideOptionMenu',
-        'showOptionMenu',
-        'closeWindow',
-        'scanQRCode',
-        'chooseWXPay',
-        'openProductSpecificView',
-        'addCard',
-        'chooseCard',
-        'openCard'
-      ]
-  });
-  */
- /*
-        window.wxData = {
-            "appId": "wxc000894c65dd9f3c", // 服务号可以填写appId
-            "imgUrl":'http://app9.download.anzhuoshangdian.com/cat/icon.png',
-            "link":'http://app9.download.anzhuoshangdian.com/cat/',
-            "desc":"最近微信刷屏的游戏，喵的太贱了，快来感受下吧",
-            "title":"最近微信刷屏的游戏，喵的太贱了，快来感受下吧"
-        };
-        window.wxFriend = {
-            "appId": "wxc000894c65dd9f3c", // 服务号可以填写appId
-            "imgUrl":'http://app9.download.anzhuoshangdian.com/cat/icon.png',
-            "link":'http://app9.download.anzhuoshangdian.com/cat/',
-            "desc":'最近微信刷屏的游戏，喵的太贱了，快来感受下吧',
-            "title":"最近微信刷屏的游戏《来自喵星的你》，喵的太贱了，快来感受下吧"
-        };
-        WeixinApi.ready(function(Api) {
-            var wxCallbacks = {
-                ready : function() {
-                },
-                cancel : function(resp) {
-                },
-                fail : function(resp) {
-                },
-                confirm : function(resp) {
-                },
-                all : function(resp) {
-                }
-            };
-            Api.shareToFriend(wxFriend, wxCallbacks);
-            Api.shareToTimeline(wxData, wxCallbacks);
-            Api.shareToWeibo(wxData, wxCallbacks);
-        });*/
-        
-</script>
-<script src="js/jquery-2.0.0.min.js"></script>
-<script src="js/gameEnter.js?v=11.2"></script>
-<script src="js/Tween.js"></script>
-<script src="js/common.js"></script>
-<script src="js/jquery.eraser.js"></script>
-
 
 <script cocos src="game.min.js"></script>
 </body>
