--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>测试项目</title>
+    <title>Cocos2d-html5 Hello World test</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -10,7 +10,6 @@
     <meta name="x5-fullscreen" content="true"/>
     <meta name="360-fullscreen" content="true"/>
     <style>
-    	\*
         body, canvas, div {
             -moz-user-select: none;
             -webkit-user-select: none;
@@ -18,15 +17,54 @@
             -khtml-user-select: none;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
-        */
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
-	<div style="width:100%;height:100%;overflow:auto; z-index:-10;position:absolute;">
-    <img style=" z-index: -10;" src="res/CloseNormal.png" height="0" width="0" />
-		</div>
 <canvas id="gameCanvas" width="800" height="450"></canvas>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+	alert("hello!!!");
+  wx.config({
+      debug: true,
+      appId: 'wxc000894c65dd9f3c',
+      timestamp: 1438155232,
+      nonceStr: 'helloworldworldhello',
+      signature: '1921d91eec2b0fa6cd7fda4b21413819339a74ba',
+      jsApiList: [
+        'onMenuShareAppMessage'
+      ]
+  });
+  wx.ready(function () {
+  // 2. 分享接口
+  // 2.1 监听“分享给朋友”，按钮点击、自定义分享内容及分享结果接口
+    wx.onMenuShareAppMessage({
+      title: '互联网之子',
+      desc: '在长大的过程中，我才慢慢发现，我身边的所有事，别人跟我说的所有事，那些所谓本来如此，注定如此的事，它们其实没有非得如此，事情是可以改变的。更重要的是，有些事既然错了，那就该做出改变。',
+      link: 'http://h5.ccnec.com/weixintest04/',
+      imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
+      trigger: function (res) {
+        // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
+        alert('用户点击发送给朋友');
+      },
+      success: function (res) {
+        alert('已分享');
+      },
+      cancel: function (res) {
+        alert('已取消');
+      },
+      fail: function (res) {
+        alert(JSON.stringify(res));
+      }
+    });
+
+});
+
+wx.error(function (res) {
+  alert(res.errMsg);
+});
+</script>
 
 <script cocos src="game.min.js"></script>
+
 </body>
 </html>
