--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 <script src="common.js"></script>
 
 <script cocos src="game.min.js"></script>
+<script>
+alert("kkkkkkk");	
+</script>
 </body>
 </html>
