--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 <script cocos src="game.min.js"></script>
 <script>
        // var imgUrl = 'http://27.131.221.248/lapp/icbc02/img/share.jpg';
-alert("hello");
-		var imgUrl = 'http://philips.idser.cn/js/logo.jpg';
-        var lineLink = window.location.href;
+		var imgUrl = 'http://oiy37215.github.io/game/gh-pages/res/CloseNormal.png';
+        var lineLink = http://oiy37215.github.io/game;
         var shareTitle = '飞常金喜贺新春';
         var appid = '';
         var desc1 = '飞常金喜贺新春';
@@ -75,6 +74,7 @@ alert("hello");
             // 发送给好友
             WeixinJSBridge.on('menu:share:appmessage', function(argv){
                 shareFriend();
+                alert("friend");
             });
             // 分享到朋友圈
             WeixinJSBridge.on('menu:share:timeline', function(argv){
