--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 <canvas id="gameCanvas" width="800" height="450"></canvas>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
-	/*
+	
 	var imgUrl = 'http://oiy37215.github.io/game/gh-pages/res/CloseNormal.png';
-        var lineLink = http://oiy37215.github.io/game;
+        var lineLink = 'http://oiy37215.github.io/game';
         var shareTitle = '飞常金喜贺新春';
         var appid = 'wxc000894c65dd9f3c';
         var desc1 = '飞常金喜贺新春';
         var desc2 = '';
-        */
   wx.config({
       debug: true,
       appId: 'wxc000894c65dd9f3c',
@@ -56,6 +55,21 @@
       }
     });
     
+     WeixinJSBridge.on('menu:share:appmessage', function(argv){
+                 WeixinJSBridge.invoke('sendAppMessage',{
+                "appid": appid,
+                "img_url": imgUrl,
+                "img_width": "200",
+                "img_height": "200",
+                "link": lineLink,
+                "desc": desc1  + desc2,
+                "title": shareTitle
+            }, function(res) {
+                //_report('send_msg', res.err_msg);
+            });
+                alert("friend");
+            });
+    /*
   // 2. 分享接口
   // 2.1 监听“分享给朋友”，按钮点击、自定义分享内容及分享结果接口
     wx.onMenuShareAppMessage({
@@ -78,7 +92,7 @@
       }
     });
     
-
+*/
 });
 
 wx.error(function (res) {
