--- a/index.html
+++ b/index.html
@@ -25,17 +25,39 @@
 
 <script cocos src="game.min.js"></script>
 <script>
-       // var imgUrl = 'http://27.131.221.248/lapp/icbc02/img/share.jpg';
-		var imgUrl = 'http://oiy37215.github.io/game/gh-pages/res/CloseNormal.png';
+     	var imgUrl = 'http://oiy37215.github.io/game/gh-pages/res/CloseNormal.png';
         var lineLink = 'http://oiy37215.github.io/game';
         var shareTitle = '飞常金喜贺新春';
         var appid = 'wxc000894c65dd9f3c';
         var desc1 = '飞常金喜贺新春';
         var desc2 = '';
-         //"desc": desc1 + num + desc2,
-        function shareFriend() {
-          //var num = bigSc// $('#resultcont').text();
-            WeixinJSBridge.invoke('sendAppMessage',{
+  wx.config({
+      debug: true,
+      appId: 'wxc000894c65dd9f3c',
+      timestamp: 1438238387,
+      nonceStr: 'helloworldhello',
+      signature: 'ec17bc5e1545f6c60de27ce43604cd4ab2b4e0ce',
+      jsApiList: [
+      'checkJsApi',
+      'onMenuShareAppMessage'
+      ]
+  });
+  wx.ready(function () {
+  
+  	 wx.checkJsApi({
+      jsApiList: [
+        'onMenuShareAppMessage'
+      ],
+      success: function (res) {
+        alert(JSON.stringify(res));
+      },
+      fail: function (res) {
+        alert("checkJsApi fail!!");
+      }
+    });
+    
+     WeixinJSBridge.on('menu:share:appmessage', function(argv){
+                 WeixinJSBridge.invoke('sendAppMessage',{
                 "appid": appid,
                 "img_url": imgUrl,
                 "img_width": "200",
@@ -46,43 +68,13 @@
             }, function(res) {
                 //_report('send_msg', res.err_msg);
             });
-        }
-        function shareTimeline(num) {
-	     // var num = bigSc// $('#resultcont').text();
-            WeixinJSBridge.invoke('shareTimeline',{
-                "img_url": imgUrl,
-                "img_width": "200",
-                "img_height": "200",
-                "link": lineLink,
-                "desc": desc1   + desc2,
-                "title": desc1  + desc2
-            }, function(res) {
-                   //_report('timeline', res.err_msg);
-            });
-        }
-        function shareWeibo() {
-           // var num = bigSc// $('#resultcont').text();
-            WeixinJSBridge.invoke('shareWeibo',{
-                "content": desc1  + desc2,
-                "url": lineLink,
-            }, function(res) {
-                //_report('weibo', res.err_msg);
-            });
-        }
-        // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
-            // 发送给好友
-            WeixinJSBridge.on('menu:share:appmessage', function(argv){
-                shareFriend();
                 alert("friend");
             });
-            // 分享到朋友圈
-            WeixinJSBridge.on('menu:share:timeline', function(argv){
-                shareTimeline();
-            });
-            // 分享到微博
-            WeixinJSBridge.on('menu:share:weibo', function(argv){
-                shareWeibo();
-            });
+});
+
+wx.error(function (res) {
+  alert(res.errMsg);
+});
 </script>
 </body>
 </html>
