--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
 <script cocos src="game.min.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
      	var imgUrl = 'http://oiy37215.github.io/game/gh-pages/res/CloseNormal.png';
         var lineLink = 'http://oiy37215.github.io/game';
