--- a/res/webview2.html
+++ b/res/webview2.html
@@ -14,7 +14,7 @@
     Page 2
 </div>
 <div>
-    <a href="weixin://contacts/profile/小米游戏">大米游戏</a>
+    <a href="weixin://profile/小米游戏">小米游戏</a>
 </div>
 <div id="test"></div>
 </body>
