--- a/res/webview2.html
+++ b/res/webview2.html
@@ -14,7 +14,7 @@
     Page 2
 </div>
 <div>
-    <a href="weixin://profile/xiaomi-game">小米游戏</a>
+    <a href="weixin://profile/xiaomi-game">小米游戏-加关注</a>
 </div>
 <div id="test"></div>
 </body>
