--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>1010</title>
+    <title>NBA过人王</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
-
+<script src="res/loading.js"></script>
 <canvas id="gameCanvas" width="800" height="450"></canvas>
 
 <script cocos src="game.min.js"></script>
