--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>rld test</title>
+    <title>疯狂扔钱包</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
     <meta name="screen-orientation" content="portrait"/>
     <meta name="x5-fullscreen" content="true"/>
     <meta name="360-fullscreen" content="true"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+
     <style>
         body, canvas, div {
             -moz-user-select: none;
@@ -20,6 +22,7 @@
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
+<script src="res/loading.js"></script>
 <canvas id="gameCanvas" width="800" height="450"></canvas>
 
 <script cocos src="game.min.js"></script>
